# valenx

./: .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DESIGN_PRINCIPLES.md  GOVERNANCE.md  LANGUAGES.md  LICENSE-APACHE  LICENSE-MIT  MAINTAINERS.md  NEXT_PHASE.md  POLICIES.md  QUICKSTART.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  STATUS.md  TESTING.md  THIRD-PARTY-NOTICES  deny.toml  rust-toolchain.toml  rustfmt.toml
crates/valenx-a11y/: Cargo.toml
crates/valenx-a11y/src/: lib.rs
crates/valenx-acidbase/: Cargo.toml
crates/valenx-acidbase/src/: buffer.rs  error.rs  lib.rs  ph.rs  strong.rs  weak.rs  weak_base.rs
crates/valenx-acoustics/: Cargo.toml
crates/valenx-acoustics/src/: doppler.rs  error.rs  lib.rs  radiation.rs  reverberation.rs  room.rs  spl.rs
crates/valenx-addons/: Cargo.toml
crates/valenx-addons/src/: entrypoint.rs  error.rs  install.rs  lib.rs  manifest.rs  registry.rs
crates/valenx-aero/: Cargo.toml
crates/valenx-aero/src/: api.rs  benchmark.rs  compressible.rs  cutcell.rs  domain.rs  error.rs  forces.rs  geometry.rs  grid.rs  immersed.rs  lib.rs  poisson.rs  postprocess.rs  presets.rs  refine.rs  report.rs  solver.rs  sweep.rs  transient.rs  turbulence.rs  wallmodel.rs  wind.rs
crates/valenx-align/: Cargo.toml
crates/valenx-align/src/: bio.rs  error.rs  io.rs  lib.rs  limits.rs  matrix.rs  rust_bio.rs
crates/valenx-animate/: Cargo.toml
crates/valenx-animate/src/: animation.rs  error.rs  lib.rs  persist.rs  tween.rs
crates/valenx-antenna/: Cargo.toml
crates/valenx-antenna/src/: beamwidth.rs  error.rs  friis.rs  gain.rs  lib.rs  spec.rs  wave.rs
crates/valenx-app/: Cargo.toml  build.rs
crates/valenx-app-core/: Cargo.toml
crates/valenx-app-core/src/: histograms.rs  lib.rs  menu_ui.rs  panel_help.rs  tooltips.rs
crates/valenx-app/src/: acidbase_workbench.rs  acoustics_workbench.rs  adapter_status.rs  aero_workbench.rs  agent_commands.rs  animate_workbench.rs  antenna_workbench.rs  assistant_workbench.rs  astro_workbench.rs  audit.rs  audit_history.rs  autonomy_workbench.rs  background.rs  batteryecm_workbench.rs  batterypack_workbench.rs  beam_workbench.rs  bearing_workbench.rs  beltdrive_workbench.rs  bjt_workbench.rs  blackhole_workbench.rs  bmr_workbench.rs  bolt_workbench.rs  bondgraph_workbench.rs  bonemech_workbench.rs  bracket_product.rs  brake_workbench.rs  brep_workbench.rs  buckling_workbench.rs  cad_workbench.rs  cam_overlay.rs  camdynamics_workbench.rs  capacitor_workbench.rs  car_workbench.rs  cfd_workbench.rs  chaindrive_workbench.rs  clutch_workbench.rs  coil_workbench.rs  collision_workbench.rs  columnsteel_workbench.rs  combustion_workbench.rs  (+187 more)
crates/valenx-app/tests/: headless_screenshots.rs  pipeline_e2e.rs
crates/valenx-app/wix/: main.wxs
crates/valenx-arch/: Cargo.toml
crates/valenx-arch/src/: bcf.rs  beam.rs  column.rs  document.rs  door.rs  entity.rs  error.rs  lib.rs  mep.rs  opening.rs  persist.rs  roof.rs  schedule.rs  slab.rs  space.rs  stair.rs  structural.rs  wall.rs  window.rs
crates/valenx-arch/tests/: ifc4_expansion.rs  mep_integration.rs  structural_export.rs
crates/valenx-assembly/: Cargo.toml
crates/valenx-assembly/src/: assembly.rs  diagnostics.rs  drag.rs  error.rs  explode.rs  interference.rs  joint.rs  kinematics.rs  lib.rs  mate.rs  part.rs  persist.rs  solver.rs  urdf.rs
crates/valenx-astro/: Cargo.toml
crates/valenx-astro/examples/: ascent.rs
crates/valenx-astro/src/: access.rs  aero.rs  atmosphere.rs  budget.rs  config.rs  conjunction.rs  constants.rs  coverage.rs  dynamics.rs  eclipse.rs  engine_cycle.rs  error.rs  flight3d.rs  flight6dof.rs  frames.rs  groundtrack.rs  guidance.rs  influence.rs  lambert.rs  landing.rs  launch.rs  lib.rs  maneuver.rs  mass.rs  mission.rs  orbit.rs  orbit3d.rs  precise_time.rs  presets.rs  propulsion.rs  radec.rs  recovery.rs  reentry.rs  reentry_hypersonic.rs  rendezvous.rs  result.rs  rigidbody.rs  sim.rs  thermochem.rs  vehicle.rs  (+2 more)
crates/valenx-audit/: Cargo.toml
crates/valenx-audit/src/: lib.rs
crates/valenx-audit/tests/: cli_integration.rs
crates/valenx-battery-ecm/: Cargo.toml
crates/valenx-battery-ecm/src/: error.rs  lib.rs  ocv.rs  sim.rs  thevenin.rs
crates/valenx-batterypack/: Cargo.toml
crates/valenx-batterypack/src/: cell.rs  error.rs  lib.rs  pack.rs  rate.rs
crates/valenx-beam/: Cargo.toml
crates/valenx-beam/src/: beam.rs  error.rs  lib.rs  section.rs
crates/valenx-bearing/: Cargo.toml
crates/valenx-bearing/src/: bearing.rs  error.rs  lib.rs  life.rs  load.rs  static_load.rs
crates/valenx-beltdrive/: Cargo.toml
crates/valenx-beltdrive/src/: error.rs  friction.rs  geometry.rs  lib.rs  power.rs  spec.rs
crates/valenx-binder-score/: Cargo.toml
crates/valenx-binder-score/src/: error.rs  lib.rs  score.rs
crates/valenx-bio/: Cargo.toml
crates/valenx-bio/src/: alignment.rs  alphabet.rs  fastq.rs  lib.rs  sequence.rs  structure.rs  trajectory.rs  vcf.rs
crates/valenx-bio/tests/: alignment_basic.rs  blast_cli.rs  dcd_round_trip.rs  fasta_cli.rs  fasta_round_trip.rs  fastq_cli.rs  fastq_round_trip.rs  pdb_info_cli.rs  pdb_round_trip.rs  sam_info_cli.rs  sam_smoke.rs  vcf_info_cli.rs  vcf_smoke.rs
crates/valenx-bioseq/: Cargo.toml
crates/valenx-bioseq/src/: alphabet.rs  editing.rs  error.rs  index.rs  lib.rs  record.rs  seq.rs
crates/valenx-bjt/: Cargo.toml
crates/valenx-bjt/src/: bias.rs  error.rs  lib.rs  model.rs
crates/valenx-blender-mesh-ops/: Cargo.toml
crates/valenx-blender-mesh-ops/src/: bevel.rs  bool_modifier.rs  bridge.rs  error.rs  extrude.rs  inset.rs  lib.rs  loop_cut.rs  mesh.rs  panel.rs  solidify.rs
crates/valenx-bmr/: Cargo.toml
crates/valenx-bmr/src/: bmr.rs  energy.rs  error.rs  lib.rs
crates/valenx-bolt/: Cargo.toml
crates/valenx-bolt/src/: error.rs  joint.rs  lib.rs  material.rs  stress.rs
crates/valenx-bonemech/: Cargo.toml
crates/valenx-bonemech/src/: bone.rs  density.rs  lib.rs  (+2 more)
crates/valenx-brake/: Cargo.toml
crates/valenx-brlcad-csg/: Cargo.toml
(+3246 files in other folders)
