[package]
name         = "valenx-a11y"
description  = "Accessibility helpers — WCAG 2.1 colour-contrast computation, AA / AAA gates, contrast-ratio audit. Lane F of NEXT_PHASE."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
readme.workspace       = true

publish.workspace     = true
[dependencies]
serde       = { workspace = true }

[dev-dependencies]
serde_json  = { workspace = true }
