[package]
name        = "valenx-addons"
description = "In-app add-on manager for Valenx — registers, installs, lists, updates, and uninstalls community workbenches. Manual install-by-URL is the v1 surface; GitHub-search support is deferred until reqwest's transitive dep tree is verified on every supported platform."

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true

publish.workspace     = true
[dependencies]
anyhow      = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
ron         = { workspace = true }
tracing     = { workspace = true }

# Round-14 H1: pull in valenx-core so install.rs can delegate to the
# shared `adapter_helpers::copy_dir_recursive`. Pre-fix the addons
# crate kept its own copy of the recursive copy walker — diverging
# from the round-6 hardened helper meant a future fix landing
# upstream (e.g. tightening the per-file cap or adding a per-tree
# size cap) would silently NOT propagate to the addon install path.
valenx-core = { path = "../valenx-core" }

[lints.rust]
unused_imports = "warn"
missing_docs   = "warn"
