[package]
name        = "valenx-aero"
description = "3D external-aerodynamics CFD — a virtual wind tunnel for cars, wings and arbitrary bodies. Immersed-boundary incompressible Navier-Stokes on a Cartesian staggered grid with k-epsilon / k-omega SST turbulence; drag/lift/moment coefficients + pressure fields. A real working v1, not ANSYS Fluent / STAR-CCM+ parity."

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true

publish.workspace     = true

[dependencies]
thiserror = { workspace = true }
nalgebra  = { workspace = true }
rayon     = { workspace = true }

valenx-cfd-native = { path = "../valenx-cfd-native" }
valenx-mesh       = { path = "../valenx-mesh" }
valenx-cad        = { path = "../valenx-cad" }

[lints.rust]
unused_imports = "warn"
missing_docs   = "warn"
